# oxur

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
assets/ai/: CLAUDE-CODE-COVERAGE.md  OXUR-SESSION-BOOTSTRAP.md
crates/design/: CHANGELOG.md
crates/design/dev/: 0001-project-setup.md  0002-oxur-lisp-resources-analysis.md
crates/design/dev/oxd/: 0003-phase-3-index-synchronization.md  0004-phase-4-document-addition.md  0007-phase-7-advanced-onboarding.md  0010-phase-10-info-and-metadata.md  0011-phase-11-rename.md
crates/design/docs/: 00-index.md  index.md
crates/design/docs/01-draft/: 0001-oxur-a-letter-of-intent.md  0001-oxur-letter-of-intent.md
crates/design/docs/04-accepted/: 0002-design-docs-cli.md  0003-oxur-design-documentation-cli-build-plan.md  0004-oxur-design-documentation-cli-build-plan.md
crates/design/docs/05-active/: 0001-oxur-letter-of-intent.md
crates/design/docs/10-superseded/: 0002-renamed-test.md
crates/design/docs/templates/: design-doc-template.md
crates/design/src/: cli.rs  config.rs  constants.rs  errors.rs  git.rs  index.rs  index_sync.rs  lib.rs  main.rs  normalize.rs  state.rs  theme.rs
crates/design/src/commands/: add.rs  debug.rs  index.rs  info.rs  list.rs  mod.rs  new.rs  remove.rs  rename.rs  replace.rs  sync_location.rs  transition.rs  update_index.rs  validate.rs
crates/design/tests/: integration_tests.rs
crates/design/tests/common/: mod.rs
crates/oxur-ast/: Cargo.toml
crates/oxur-ast/tests/: ast_tests.rs  builder_item_tests.rs  builder_stmt_tests.rs  parser_tests.rs  printer_tests.rs  sexp_types_tests.rs
design/: Cargo.toml  README.md
design/dev/oxd/: 0001-phase-1-foundation-enhancements.md  0002-phase-2-core-commands.md  0005-phase-5-testing-and-polish.md  0006-phase-6-state-management.md  0008-phase-8-debug-and-search.md  0009-phase-9-lifecycle-management.md
design/docs/: 00-index.md
design/docs/01-draft/: 0002-test-document.md
design/examples/: sample-document.md
design/proptest-regressions/: doc.txt  state.txt
design/src/: cli.rs  config.rs  doc.rs  errors.rs  extract.rs  filename.rs  git.rs  index.rs  index_sync.rs  lib.rs  main.rs  normalize.rs  prompt.rs  state.rs  theme.rs
design/src/commands/: add.rs  add_headers.rs  debug.rs  index.rs  info.rs  list.rs  mod.rs  new.rs  remove.rs  replace.rs  scan.rs  search.rs  show.rs  sync_location.rs  transition.rs  update_index.rs  validate.rs
docs/: spec.md
oxur-ast/examples/: build_simple_crate.rs  parse_example.rs
oxur-ast/src/: error.rs  lib.rs
oxur-ast/src/ast/: dump.rs  item.rs  main.rs  path.rs  span.rs  stmt.rs  types.rs
oxur-ast/src/builder/: build.rs  expr.rs  helpers.rs  mod.rs
oxur-ast/src/sexp/: printer.rs  types.rs
oxur-ast/tests/: ast_tests.rs  builder_expr_tests.rs  builder_stmt_tests.rs  builder_tests.rs  error_tests.rs  integration_tests.rs  lexer_tests.rs  sexp_types_tests.rs
src/: main.rs
src/parser/: main.rs  sexp.rs
src/sexp/: main.rs
(+10 files in other folders)
