[package]
name = "oxur"
version = "0.0.1"
authors = ["Oxur Group <https://github.com/oxur>"]
edition = "2018"

[dependencies]
lexpr = "0.2.3"
colored = "1.7"

    [dependencies.proc-macro2]
    version = "1.0"
    features = ["span-locations"]

    [dependencies.syn]
    version = "1.0.13"
    default-features = false
    features = ["parsing", "full", "extra-traits"]

[[bin]]
name = "dump-ast"
path = "src/ast/main.rs"

[[bin]]
name = "sexp"
path = "src/sexp/main.rs"
